implemented integration between catalog and inventory services